--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,13 @@
     <string name="pref_key_deal_settings">pref_key_deal_settings</string>
     <string name="pref_key_connect_settings">pref_key_connect_settings</string>
     <string name="pref_key_logout_settings">pref_key_logout_settings</string>
+    <string name="pref_key_accountmanager_settings">pref_key_accountmanager_settings</string>
+    <string name="pref_key_email_settings">pref_key_email_settings</string>
+    <string name="pref_key_phone_settings">pref_key_phone_settings</string>
+    <string name="pref_key_password_settings">pref_key_password_settings</string>
+    <string name="pref_key_sc_settings">pref_key_sc_settings</string>
+    <string name="pref_key_wx_settings">pref_key_wx_settings</string>
+    <string name="pref_key_qq_settings">pref_key_qq_settings</string>
     <!-- title -->
     <string name="pref_title_base_settings">基本设置</string>
     <string name="pref_title_netmode_settings">省流量模式</string>
@@ -51,12 +58,24 @@
     <string name="pref_title_deal_settings">回收协议</string>
     <string name="pref_title_connect_settings">联系我们</string>
     <string name="pref_title_logout_settings">退出帐号</string>
+    <string name="pref_title_accountmanager_settings">账号管理</string>
+    <string name="pref_title_email_settings">邮箱</string>
+    <string name="pref_title_phone_settings">手机</string>
+    <string name="pref_title_password_settings">设置密码</string>
+    <string name="pref_title_sc_settings">社交帐号</string>
+    <string name="pref_title_wx_settings">微信</string>
+    <string name="pref_title_qq_settings">QQ</string>
     <!-- summary -->
     <string name="pref_summary_netmode_settings">仅Wi-Fi环境下才会自动加载图片</string>
     <string name="pref_summary_autodownload_settings">仅Wi-Fi环境下会自动下载</string>
     <string name="pref_summary_clearcache_settings">包括图片、音频和视频缓存</string>
     <string name="pref_summary_accountsafe_settings">管理帐号安全，修改帐号密码等</string>
     <string name="pref_summary_checkipdate_settings">当前版本</string>
+    <string name="pref_summary_email_settings">绑定邮箱</string>
+    <string name="pref_summary_phone_settings">绑定手机</string>
+    <string name="pref_summary_password_settings">为保障您的帐号安全，请设置密码</string>
+    <string name="pref_summary_wx_settings">尚未绑定</string>
+    <string name="pref_summary_qq_settings">尚未绑定</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
