2018-4-4 修改了部分bug 傻逼梁金彪快加QQ和微信登录功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="qq_login">QQ登录</string>
     <string name="wx_login">微信登录</string>
     <string name="forget_pwd"><u>忘记密码?</u></string>
+    <string name="net_error">网络错误</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_settings">Hello blank fragment</string>
 
