--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,12 @@
     <string name="machine_code">机器码</string>
     <string name="user">用户</string>
     <string name="book_name">书籍名称</string>
+    <string name="book_author">作者</string>
+    <string name="book_publisher">出版社</string>
+    <string name="book_price">价格</string>
     <string name="community_contri">社区贡献</string>
     <string name="setting">设置</string>
+    <string name="book_change">旧书置换</string>
     <string name="input_m_code">手动输入机器码</string>
     <string name="flashlight">手电筒</string>
     <string name="scanning_info">对准机器上的二维码，即可自动扫描</string>
@@ -30,6 +34,7 @@
     <string name="wx_login">微信登录</string>
     <string name="forget_pwd"><u>忘记密码?</u></string>
     <string name="net_error">网络错误</string>
+    <string name="bin_success">机器扫码成功</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_settings">Hello blank fragment</string>
 
