--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="book_author">作者</string>
     <string name="book_publisher">出版社</string>
     <string name="book_price">价格</string>
-    <string name="community_contri">社区贡献</string>
+    <string name="community_contri">贡献记录</string>
     <string name="setting">设置</string>
     <string name="book_change">旧书置换</string>
     <string name="input_m_code">手动输入机器码</string>
@@ -35,6 +35,9 @@
     <string name="forget_pwd"><u>忘记密码?</u></string>
     <string name="net_error">网络错误</string>
     <string name="bin_success">机器扫码成功</string>
+    <string name="consume_id">编号：</string>
+    <string name="consume_time">时间：</string>
+    <string name="consume_point">积分：</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_settings">Hello blank fragment</string>
 
